Fix z-index

--- a/wp-content/themes/betheme-child/style86.css
+++ b/wp-content/themes/betheme-child/style86.css
@@ -56,6 +56,10 @@ Version: 2.0.1
   white-space: nowrap !important;
 }
 
+.column_trailer_box:hover {
+  z-index: 1;
+}
+
 .trailer_box .desc .subtitle, .trailer_box.plain .desc .line {
   background-color: rgba(0,0,0,0.4);
   backdrop-filter: blur(10px);
